attempted fix for scrollbar not showing

--- a/resources/style/main.css
+++ b/resources/style/main.css
@@ -104,11 +104,12 @@ p {
 }
 
 #content {
-    overflow-x: hidden;
     width: 100%;
     height: 100%;
     padding: 0 40px;
     box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
 }
 
